[package]
name = "todo-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(unix)'.dependencies]
ncurses = { version = "5.101.0", features = ["wide"] }
[target.'cfg(windows)'.dependencies]
pdcurses = { git = "https://github.com/et342/pdcurses-rs", features = ["ncurses_compat"] }
